--- a/常用链接.md
+++ b/常用链接.md
@@ -1,2 +1,14 @@
 
 [vuex](https://vuex.vuejs.org/zh/)
+
+
+[vue官网](https://cn.vuejs.org)
+
+[vue官网教程](https://cn.vuejs.org/v2/guide/)
+
+[动画样式 animate.css](https://daneden.github.io/animate.css/)
+
+[vue-router文档 ](https://www.cntofu.com/book/132/index.html)
+
+
+[webpack官网](https://www.webpackjs.com/guides/installation/)
